--- a/Makefile.TXT
+++ b/Makefile.TXT
@@ -2,10 +2,10 @@ run_calculator: CPU_Calculator.exe
 	CPU_Calculator.exe
 
 CPU_Calculator.exe: CPU_executor.cpp Stack\Stack_functions.cpp Stack\Log_functions.cpp Stack\Stack.h CPU_assembler.cpp CPU.h Commands.h
-	g++ CPU_executor.cpp Stack\Stack_functions.cpp Stack\Log_functions.cpp -o CPU_Calculator.exe
+	g++ -w CPU_executor.cpp Stack\Stack_functions.cpp Stack\Log_functions.cpp -o CPU_Calculator.exe
 
-run_assembler: CPU_assembler.exe
-	CPU_assembler.exe
+run_assembler: CPU_assembler.exe 
+	CPU_assembler.exe square_equation.txt
 
 CPU_assembler.exe: CPU_assembler.cpp Input.txt CPU.h Commands.h
 	g++ CPU_assembler.cpp -o CPU_assembler.exe	
